# authrs

./: AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  ROADMAP.md
examples/: api_keys.rs  basic_auth.rs  jwt_auth.rs  mfa_setup.rs  rbac_demo.rs
src/: audit.rs  error.rs  lib.rs  random.rs
src/api_key/: mod.rs
src/crypto/: kdf.rs  mod.rs
src/mfa/: hotp.rs  mod.rs  recovery.rs  totp.rs
src/oauth/: client.rs  introspection.rs  mod.rs  pkce.rs  token.rs
src/password/: hasher.rs  mod.rs  strength.rs
src/passwordless/: magic_link.rs  mod.rs  otp.rs
src/rbac/: mod.rs  permission.rs  policy.rs  role.rs
src/security/: account.rs  cookie.rs  csrf.rs  mod.rs  rate_limit.rs
src/token/: jwt.rs  mod.rs  refresh.rs  session.rs
src/webauthn/: authentication.rs  credential.rs  mod.rs  registration.rs
tests/: integration_api_key.rs  integration_audit.rs  integration_auth_flow.rs  integration_crypto.rs  integration_jwt_tokens.rs  integration_mfa.rs  integration_oauth.rs  integration_passwordless.rs  integration_rbac.rs
