[package]
categories = ["authentication", "cryptography"]
description = "A comprehensive authentication library for Rust"
edition = "2024"
keywords = ["auth", "authentication", "jwt", "password", "security"]
license = "MIT"
name = "authrs"
version = "0.1.0"

[lib]
name = "authrs"
path = "src/lib.rs"

[features]
# 默认启用最常用的功能
default = ["argon2", "jwt", "mfa"]

# 密码哈希算法
argon2 = ["dep:argon2"]
bcrypt = ["dep:bcrypt"]

# JWT 支持
jwt = ["dep:jsonwebtoken"]

# MFA (TOTP/HOTP) 支持
mfa = ["dep:sha1"]

# 完整功能
full = ["argon2", "bcrypt", "jwt", "mfa"]

[dependencies]
# 密码哈希 (可选)
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.15", optional = true }

# JWT (可选)
jsonwebtoken = { version = "9", optional = true }

# MFA 依赖 - sha1 用于 TOTP/HOTP (可选)
sha1 = { version = "0.10", optional = true }

# 核心依赖 (始终需要)
# 安全随机数
rand = "0.8"
rand_core = "0.6"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"

# Base64/Base32 编码
base32 = "0.5"
base64 = "0.22"

# URL 编码 (用于 otpauth URI)
urlencoding = "2.1"

# 常量时间比较（防止时序攻击）
subtle = "2.5"

# HMAC 和 SHA2 (用于 CSRF, security, 以及 MFA 的 SHA256/SHA512)
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
