[package]
authors = ["LioRael <lioraeldev@gmail.com>"]
categories = ["authentication", "cryptography"]
description = "A comprehensive authentication library for Rust"
documentation = "https://docs.rs/authrs"
edition = "2024"
exclude = ["benches/", "examples/", "tests/"]
keywords = ["auth", "authentication", "jwt", "password", "security"]
license = "MIT"
name = "authrs"
repository = "https://github.com/LioRael/authrs"
version = "0.1.1"

[lib]
doctest = true
name = "authrs"
path = "src/lib.rs"

[features]
# 默认启用最常用的功能
default = ["argon2", "jwt", "mfa"]

# 增强功能
enhanced = [
    "api-key",
    "argon2",
    "crypto",
    "jwt",
    "mfa",
    "oauth",
    "passwordless",
    "rbac",
    "webauthn",
]

# 密码哈希算法
argon2 = ["dep:argon2"]
bcrypt = ["dep:bcrypt"]
scrypt = ["dep:scrypt"]

# JWT 支持
jwt = ["dep:jsonwebtoken"]

# MFA (TOTP/HOTP) 支持
mfa = ["dep:sha1"]

# WebAuthn / Passkeys 支持
webauthn = ["dep:url", "dep:webauthn-rs"]

# Passwordless 支持（Magic Link / OTP）
passwordless = []

# 密码学工具（HKDF 等）
crypto = []

# OAuth 2.0 支持
oauth = []

# RBAC (角色权限管理) 支持
rbac = []

# API Key 支持
api-key = []

# 完整功能
full = [
    "api-key",
    "argon2",
    "bcrypt",
    "crypto",
    "jwt",
    "mfa",
    "oauth",
    "passwordless",
    "rbac",
    "scrypt",
    "webauthn",
]

[dependencies]
# 密码哈希 (可选)
argon2 = { version = "0.5", optional = true }
bcrypt = { version = "0.17", optional = true }
scrypt = { version = "0.11", optional = true }

# JWT (可选) - 使用 rust_crypto 后端和 PEM 支持
jsonwebtoken = { version = "10", optional = true, default-features = false, features = [
    "rust_crypto",
    "use_pem",
] }

# MFA 依赖 - sha1 用于 TOTP/HOTP (可选)
sha1 = { version = "0.10", optional = true }

# 核心依赖 (始终需要)
# 安全随机数
rand = "0.10.0-rc.5"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "2"

# Base64/Base32 编码
base32 = "0.5"
base64 = "0.22"

# URL 编码 (用于 otpauth URI)
urlencoding = "2.1"

# 常量时间比较（防止时序攻击）
subtle = "2.6"

# PHC string support for password hashers
password-hash = "0.5"

# HMAC 和 SHA2 (用于 CSRF, security, 以及 MFA 的 SHA256/SHA512)
hmac = "0.12"
sha2 = "0.10"

# WebAuthn / Passkeys (可选)
url = { version = "2.5", optional = true }
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation",
], optional = true }

# 系统随机数 (用于密码盐生成，避免 rand_core 版本冲突)
getrandom = "0.3"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

# 示例
[[example]]
name = "rbac_demo"
required-features = ["rbac"]

[[example]]
name = "jwt_auth"
required-features = ["jwt"]

[[example]]
name = "mfa_setup"
required-features = ["mfa"]

[[example]]
name = "api_keys"
required-features = ["api-key"]
